# blazesym

./: .clippy.toml  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README-devel.md  README.md  announce.md  build.rs  cbindgen.toml  codecov.yml
.cargo/: config  config.toml  runner.sh
.github/: codecov.yml  dependabot.yml
.github/workflows/: build-cli.yml  build-linux.yml  build.yml  ci.yml  codeql.yml  dependabot-merge.yml  publish-capi.yml  publish-cli.yml  publish.yml  test-linux.yml  test.yml
benches/: dwarf.rs  gsym.rs  inspect.rs  main.rs  normalize.rs  symbolize.rs
capi/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
capi/benches/: capi.rs  normalize.rs
capi/examples/: input-struct-init.c
capi/include/: blazesym.h
capi/src/: error.rs  helper.rs  inspect.rs  lib.rs  normalize.rs  symbolize.rs  trace.rs  util.rs
capi/tests/: capi.rs  trace.rs
cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
cli/src/: args.rs  main.rs  trace.rs
cli/var/: shell-complete.rs
data/: config  gnu_debugdata.sh  gsym-example.c  gsym-example.ld  kallsyms.xz  proc-maps-large  test-block-augmented.ld  test-block.c  test-chroot-dbg-link.c  test-exe.c  test-gsym.ld  test-mnt-ns-child.c  test-mnt-ns.c  test-so.c  test-so.h  test-so.map  test-stable-addresses-cu2.c  test-stable-addresses.c  test-stable-addresses.ld  test-stable-addrs-cu2.c  test-stable-addrs.c  test-stable-addrs.ld  test-wait.c  test.gsym  test.rs  util.h  vmlinux-5.17.12-100.fc34.x86_64.xz
debuginfod/: Cargo.toml
debuginfod/examples/: debuginfod.rs
debuginfod/src/: client.rs  lib.rs  resolver.rs
dev/: Cargo.toml  bpf.rs  build.rs  criterion.rs  lib.rs
examples/: addr2ln.rs  addr2ln_pid.rs  addr2ln_sym.rs  backtrace.rs  inspect-mangled.rs  normalize-virt-offset.rs
examples/gsym-in-apk/: Cargo.toml  main.rs
examples/sym-debuginfod/: Cargo.toml  README.md  main.rs
examples_feedback/: addr2ln_sym.rs
go/: .golangci.yml  README.md  error.go  example_source_elf_test.go  go.mod  reason.go  source_elf.go  source_gsym_data.go  source_gsym_file.go  source_process.go  sym.go  symbolizer.go  symbolizer_option.go  symbolizer_test.go
include/: blazesym.h
scripts/: gen-one-page.py
src/: apk.rs  c_api.rs  cfg.rs  dwarf.rs  elf.rs  elf_cache.rs  error.rs  file_cache.rs  gsym.rs  insert_map.rs  kernel.rs  ksym.rs  lib.rs  maps.rs  mmap.rs  namespace.rs  once.rs  pathlike.rs  perf_map.rs  pid.rs  resolver.rs  symbolize.rs  test_helper.rs  tools.rs  util.rs  vdso.rs  zip.rs
src/breakpad/: file.rs  mod.rs  parser.rs  resolver.rs  types.rs
src/c_api/: inspect.rs  mod.rs  normalize.rs  symbolize.rs
src/dwarf/: debug_info.rs  debug_link.rs  function.rs  lazy.rs  lines.rs  location.rs  mod.rs  parser.rs  range.rs  reader.rs  relocate.rs  resolver.rs  unit.rs  units.rs
src/elf/: backend.rs  cache.rs  mod.rs  parser.rs  relocations.rs  resolver.rs  types.rs
src/gsym/: inline.rs  linetab.rs  mod.rs  parser.rs  resolver.rs  types.rs
src/inspect/: inspector.rs  mod.rs  source.rs
src/kernel/: cache.rs  depmod.rs  kaslr.rs  ksym.rs  mod.rs  modmap.rs  resolver.rs
src/kernel/bpf/: btf.rs  mod.rs  prog.rs  sys.rs
src/normalize/: buildid.rs  ioctl.rs  kernel.rs  meta.rs  mod.rs  normalize.rs  normalizer.rs  user.rs
src/symbolize/: cache.rs  evict.rs  mod.rs  perf_map.rs  source.rs  symbolizer.rs
src_feedback/: dwarf.rs  elf.rs  elf_cache.rs  ksym.rs
tests/: allocs.rs  blazesym.rs  c_api.rs  common.rs  empty_perf_map.rs  error_backtrace.rs  error_no_backtrace1.rs  error_no_backtrace2.rs  integration.rs  permission.rs  permissionless.rs
tests/bpf/src/: getpid.bpf.c
tests/common/: mod.rs
tests/suite/: inspect.rs  mod.rs  normalize.rs  symbolize.rs
tests/suite/common/: mod.rs
