[workspace]
members = [
  ".",
  "capi",
  "cli",
  "dev",
  "examples/sym-debuginfod",
  "examples/gsym-in-apk",
]
# We don't want every Cargo command to operate on all members, unless
# --workspace is specified.
default-members = ["."]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/libbpf/blazesym"
homepage = "https://github.com/libbpf/blazesym"

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(has_procmap_query_ioctl)', 'cfg(has_large_test_files)']}
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
fn-to-numeric-cast = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-time-subtraction = "warn"
uninlined-format-args = "warn"
use-self = "warn"
wildcard-imports = "warn"

[package]
name = "blazesym"
description = "blazesym is a library for address symbolization and related tasks."
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
authors = ["Daniel Müller <deso@posteo.net>", "Kui-Feng <thinker.li@gmail.com>"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/blazesym"
categories = [
  "algorithms",
  "api-bindings",
  "development-tools::debugging",
  "os::unix-apis",
  "value-formatting",
]
keywords = [
  "dwarf",
  "elf",
  "gsym",
  "stacktrace",
  "tracing",
]
exclude = ["data/kallsyms.xz"]
autobenches = false
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "backtrace",
  "demangle",
  "dwarf",
  "zlib",
]
# Enable this feature to enable APK support (mostly relevant for
# Android).
apk = []
# Enable this feature to compile in support for capturing backtraces in errors.
# Note that by default backtraces will not be collected unless opted in with
# environment variables.
backtrace = []
# Enable BPF support. Currently that entails kernel symbolization being
# able to symbolize addresses in BPF programs.
bpf = []
# Enable this feature to enable Breakpad support.
breakpad = ["dep:nom"]
# Enable this feature to get transparent symbol demangling.
demangle = ["dep:cpp_demangle", "dep:rustc-demangle"]
# Enable this feature to enable DWARF support.
dwarf = ["dep:gimli"]
# Enable this feature to enable Gsym support.
gsym = []
# Emit `tracing` traces and configure spans. User code is responsible for
# subscribing. Refer to the documentation of the [tracing] crate.
# [tracing]: https://github.com/tokio-rs/tracing
tracing = ["dep:tracing"]
# Enable this feature to enable support for zlib decompression. This is
# currently only used for handling compressed debug information.
zlib = ["dep:miniz_oxide"]
# Enable this feature to enable support for zstd decompression. This is
# currently only used for handling compressed debug information.
zstd = ["dep:zstd"]
# Enable this feature to enable support for xz decompression. This is
# currently only used for handling `.gnu_debugdata` section data
# (MiniDebugInfo)
xz = ["dep:xz2"]

# Below here are dev-mostly features that should not be needed by
# regular users.

# Expose test-only helpers for convenient use in end-to-end tests from
# crate.
test = []
# Enable code paths requiring a nightly toolchain. This feature is only meant to
# be used for testing and benchmarking purposes, not for the core library, which
# is expected to work on stable.
nightly = []

[[test]]
name = "integration"
required-features = ["test"]

[[example]]
name = "addr2ln"

[[example]]
name = "addr2ln_pid"

[[example]]
name = "backtrace"

[[example]]
name = "normalize-virt-offset"

[[example]]
name = "inspect-mangled"
required-features = ["demangle", "blazesym-dev/generate-unit-test-files"]

[[bench]]
name = "main"
harness = false
required-features = ["test"]

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1

# `bench` inherits from `release`, but we overwrite some options that
# result in excessive build times for faster iteration.
[profile.bench]
lto = false
codegen-units = 256

[dependencies]
cpp_demangle = {version = "0.5", optional = true}
gimli = {version = "0.32", optional = true}
libc = "0.2"
memmap2 = {version = "0.9", default-features = false}
miniz_oxide = {version = "0.9", default-features = false, features = ["simd", "with-alloc"], optional = true}
nom = {version = "7", optional = true}
rustc-demangle = {version = "0.1", optional = true}
tracing = {version = "0.1", default-features = false, features = ["attributes"], optional = true}
xz2 = {version = "0.1.7", default-features = false, optional = true}
zstd = {version = "0.13", default-features = false, optional = true}

[dev-dependencies]
# For performance comparison; pinned, because we use #[doc(hidden)]
# APIs.
addr2line = "=0.25.1"
anyhow = "1.0"
blazesym-dev = {path = "dev", features = ["generate-unit-test-files"]}
criterion = {version = "0.8", default-features = false, features = ["rayon", "cargo_bench_support"]}
rand = {version = "0.10", default-features = false, features = ["std", "thread_rng"]}
scopeguard = "1.2"
stats_alloc = {version = "0.1.1", features = ["nightly"]}
tempfile = "3"
test-fork = "0.1"
test-log = {version = "0.2", default-features = false, features = ["trace"]}
test-tag = "0.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
# `bpf` shouldn't be enabled by default for non-Linux targets, because
# it simply can't work.
blazesym = {path = ".", features = ["bpf"]}

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["apk", "backtrace", "breakpad", "demangle", "dwarf", "gsym"]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
