[package]
name = "blazesym-c"
description = "C bindings for blazesym"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.65"
authors = ["Daniel Müller <deso@posteo.net>"]
license = "BSD-3-Clause"
repository = "https://github.com/libbpf/blazesym"
readme = "README.md"
categories = [
  "algorithms",
  "api-bindings",
  "development-tools::debugging",
  "os::unix-apis",
  "value-formatting",
]
keywords = [
  "dwarf",
  "elf",
  "gsym",
  "stacktrace",
  "tracing",
]
include = ["src/**/*", "include/**/*", "!**/examples/**/*", "README.md", "CHANGELOG.md", "examples/input-struct-init.c", "build.rs"]
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
# Check C code documentation snippets.
check-doc-snippets = []
# Enable this feature to re-generate the library's C header file. An
# up-to-date version of this header should already be available in the
# include/ directory, so this feature is only necessary when APIs are
# changed.
generate-c-header = ["cbindgen", "which"]

[[bench]]
name = "capi"
path = "benches/capi.rs"
harness = false

[build-dependencies]
cbindgen = {version = "0.26", optional = true}
which = {version = "6.0.0", optional = true}

[dependencies]
# Pinned, because we use #[doc(hidden)] APIs.
blazesym = {version = "=0.2.0-alpha.11", path = "../", features = ["apk", "demangle", "dwarf", "gsym"]}
memoffset = "0.9"

[dev-dependencies]
blazesym-c = {path = ".", features = ["check-doc-snippets"]}
# TODO: Use 0.5.2 once released.
criterion = {git = "https://github.com/bheisler/criterion.rs.git", rev = "b913e232edd98780961ecfbae836ec77ede49259", default-features = false, features = ["rayon", "cargo_bench_support"]}
libc = "0.2.137"
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
