[package]
name = "blazesym-c"
description = "C bindings for blazesym"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
authors = ["Daniel Müller <deso@posteo.net>"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/blazesym-c"
categories = [
  "algorithms",
  "api-bindings",
  "development-tools::debugging",
  "os::unix-apis",
  "value-formatting",
]
keywords = [
  "dwarf",
  "elf",
  "gsym",
  "stacktrace",
  "tracing",
]
include = ["src/**/*", "include/**/*", "!**/examples/**/*", "LICENSE", "README.md", "CHANGELOG.md", "examples/input-struct-init.c", "build.rs", "cbindgen.toml"]
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = [
  "dwarf",
]
# Required by cargo-c
capi = []
# Check C code documentation snippets.
check-doc-snippets = []
# Enable this feature to enable blazesym's DWARF support.
dwarf = ["blazesym/dwarf"]
# Enable this feature to re-generate the library's C header file. An
# up-to-date version of this header should already be available in the
# include/ directory, so this feature is only necessary when APIs are
# changed.
generate-c-header = ["dep:cbindgen", "dep:which"]

# cargo-c configuration:
# skip header generation
[package.metadata.capi.header]
generation = false
subdirectory = false
# use the existing header for installation
[package.metadata.capi.install.include]
asset = [{ from="include/blazesym.h" }]

[[bench]]
name = "capi"
path = "benches/capi.rs"
harness = false

[build-dependencies]
cbindgen = {version = "0.29", optional = true}
which = {version = "8.0.0", optional = true}

[dependencies]
# Pinned, because we use #[doc(hidden)] APIs.
# TODO: Enable `zstd` feature once we enabled it for testing in the main
#       crate.
blazesym = {version = "=0.2.0-rc.4", path = "../", features = ["apk", "demangle", "dwarf", "gsym", "tracing", "zlib"]}
libc = "0.2"
# TODO: Remove dependency once MSRV is 1.77.
memoffset = "0.9"
tracing = "0.1"
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
blazesym = {version = "=0.2.0-rc.4", path = "../", features = ["bpf"]}

[dev-dependencies]
blazesym = {version = "=0.2.0-rc.4", path = "../", features = ["test"]}
blazesym-c = {path = ".", features = ["check-doc-snippets"]}
bindgen = {version = "0.72", default-features = false, features = ["runtime"]}
criterion = {version = "0.6", default-features = false, features = ["rayon", "cargo_bench_support"]}
tempfile = "3.20"
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
test-tag = "0.1"

[lints]
workspace = true
