[package]
name = "blazecli"
description = "A command line utility for the blazesym library."
version = "0.1.14"
edition.workspace = true
rust-version.workspace = true
default-run = "blazecli"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = [
  "api-bindings",
  "command-line-utilities",
  "development-tools::debugging",
  "os::unix-apis",
  "value-formatting",
]
keywords = [
  "breakpad",
  "cli",
  "dwarf",
  "elf",
  "gsym",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[build-dependencies]
anyhow = "1.0"
grev = "0.1.4"

[dependencies]
anyhow = "1.0"
bufio = "0.1"
blazesym = {version = "0.2.3", path = "../", features = [
  "apk",
  "breakpad",
  "demangle",
  "dwarf",
  "gsym",
  "tracing",
  "xz",
  "zlib",
  "zstd",
]}
clap = {version = "4.5", features = ["derive"]}
clap_complete = {version = "4.5", optional = true}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["ansi", "env-filter", "fmt"]}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
blazesym = {version = "0.2", path = "../", features = ["bpf"]}

[lints]
workspace = true
