# A development-only package for generating blazesym test artifacts.

[package]
name = "blazesym-dev"
version = "0.0.0"
edition = "2021"
authors = ["Daniel Müller <deso@posteo.net>"]
publish = false

[lib]
path = "lib.rs"

[features]
# Enable this feature to enable support for zstd decompression.
zstd = ["dep:zstd"]
# Enable this feature to opt in to the generation of unit test files.
# Having these test files created is necessary for running tests.
generate-unit-test-files = [
  "dep:tempfile",
  "dump_syms",
  "libbpf-sys/vendored-libbpf",
  "xz2",
  "zip",
]
# Enable this feature to opt in to the generation of large benchmark
# files (also used for regression testing).
generate-large-test-files = ["dump_syms", "reqwest", "xz2"]
# Disable generation of test files. This feature takes preference over
# `generate-unit-test-files`.
dont-generate-unit-test-files = []

[build-dependencies]
dump_syms = {version = "2.3", optional = true, default-features = false}
libc = "0.2"
reqwest = {version = "0.12", optional = true, features = ["blocking"]}
tempfile = {version = "3.20", optional = true}
vmlinux = {git = "https://github.com/libbpf/vmlinux.h.git", rev = "a9c092aa771310bf8b00b5018f7d40a1fdb6ec82"}
xz2 = {version = "0.1.7", optional = true}
zip = {version = "4", optional = true, default-features = false}
zstd = {version = "0.13.3", default-features = false, optional = true}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.build-dependencies]
libbpf-sys = {version = "1.6", default-features = false, optional = true}

[dependencies]
# TODO: Enable `zstd` feature once toolchain support for it is more
#       widespread (enabled by default in `ld`). Remove conditionals in
#       test code alongside.
blazesym = {path = "../", features = ["apk", "breakpad", "gsym", "tracing", "test"]}
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.25"

[lints]
workspace = true
