[package]
name = "gsym-in-apk"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gsym-in-apk"
path = "main.rs"

[dependencies]
blazesym = {version = "=0.2.0-rc.2", path = "../..", default-features = false, features = [
  "apk",
  "gsym",
]}
blazesym-dev = {path = "../../dev", features = ["generate-unit-test-files"]}
goblin = {version = "0.9.0", default-features = false, features = ["elf32", "elf64", "std"]}
zip = {version = "2.0.0", default-features = false}
